# Undertile-Game

./: .gitignore  README.md  diagram.json
ESP32/: platformio.ini
ESP32/Arduino/: AudioSys.cpp  AudioSys.h  Battle.cpp  UndertaleGame.ino  Utils.cpp  background.h  characters.h
PC/: .gitignore  CMakeLists.txt  Undertail  build.bat  build_mac.sh  package.txt
PC/assets/: dialogues_CN.txt
PC/src/: Battle.cpp  Battle.h  Battle_cn.cpp  Globals.cpp  Globals.h  Player.cpp  Player.h  TextAlignment.h  Utils.cpp  Utils.h  build_script.txt  game_defs.h  main.cpp  main_cn.cpp
PC/src/assets/: dialogues_CN.txt
src/: AudioSys.cpp  AudioSys.h  Battle.cpp  Battle.h  Globals.cpp  Globals.h  Player.cpp  Player.h  UndertaleGame.ino  Utils.cpp  characters.h  game_def.h  game_defs.h  main.cpp  todo
src/ESP32/: Battle.cpp  Battle.h  Player.cpp  Utils.h  characters.h  game_defs.h
src/before_splitting/: Game Dialogue Script.md  game_defs.h
